<resources>
    <string name="app_name">Lorby</string>
    <string name="lorby">Lorby</string>
    <string name="repititor">Твой личный репетитор</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Вэлком бэк!</string>
    <string name="userlogininput">Введи туда-сюда логин</string>
    <string name="inputPassword">Пароль (тоже введи)</string>
    <string name="login">Войти</string>
    <string name="register">У меня еще нет аккаунта</string>
    <string name="repititor2">Lorby - твой личный репетитор</string>
    <string name="welcomeback">С возвращением!</string>
    <string name="logout">Выйти</string>
    <string name="register3">Регистрация</string>
    <string name="createAcc">Создать аккаунт Lorby</string>
    <string name="inputmail">Введи адрес почты</string>
    <string name="createUsername">Придумай логин</string>
    <string name="warningscharacters">От 8 до 15 символов</string>
    <string name="warningSimpleword">Строчные и прописные буквы</string>
    <string name="warningnumber">Минимум 1 цифра</string>
    <string name="warningSpecialCharcter">Минимум 1 спецсимвол (!, \", #, $...)</string>
    <string name="further">Далее</string>
    <string name="sendingLetter">Выслали письмо со ссылкой\n для завершения регистрации\n на %s </string>
    <string name="checkSpam">Если письмо не пришло, не спеши ждать совиную почту - лучше проверь ящик “Спам”
                                                                                            (´｡• ω •｡`)</string>
    <string name="notArivedLetter">Письмо не пришло</string>
    <string name="createPassword">Создай пароль</string>
    <string name="repeatPassword">Повтори пароль</string>
    <string name="alertDialogLetter">Мы выслали еще одно письмо\n на указанную тобой почту\n %s</string>
    <string name="spamAlert">Не забудь проверить\n ящик “Спам”!11!!!!</string>
    <string name="okey">Понятно!!1!</string>
    <string name="welcome2">Добро пожаловать!</string>
</resources>