<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/text_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/alertDialogLetter"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/text_alert_spam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/spamAlert"
            android:textColor="@color/mediumDark"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_close"
            android:layout_width="280dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/background_button"
            android:textColor="@color/white"
            android:enabled="true"
            android:textAllCaps="false"
            android:text="@string/okey"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>