<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.fragments.MailAuthFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginVertical="10dp"
        android:padding="5dp"
        android:src="@drawable/backicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register3"
        android:textSize="20sp"
        android:fontFamily="@font/medium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendingLetter"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/medium"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="31dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:layout_marginTop="24dp"
        android:text="@string/checkSpam"
        android:textAlignment="center"
        android:textColor="@color/mediumDark"
        android:textSize="16sp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/emailimg"
        android:layout_marginTop="58dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notArrivedLetter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/background_main_button"
        android:text="@string/notArivedLetter"
        android:fontFamily="@font/medium"
        android:textAllCaps="false"
        android:elevation="0dp"
        android:textColor="@color/black"/>


</LinearLayout>